@@ -22,6 +22,7 @@
 #include <stdio.h>
 #include <set>
 #include <string>
+#include <string.h>
 #include <stdlib.h>
 #include <ctype.h>
 
