@@ -1,0 +1,30 @@
+APP=EQEmuLoginServer
+SF=AuthCredential.o clientlist.o EQEmuDatabase.o inifile.o LoginMain.o \
+RuntimeCredential.o SecurityLibrary.o serverlist.o WorldRegistration.o \
+../common/BasePacket.o ../common/Condition.o .obj/CRC16.o \
+../common/crc32.o .obj/debug.o .obj/emu_opcodes.o \
+../common/EmuTCPConnection.o ../common/EmuTCPServer.o .obj/EQPacket.o \
+.obj/EQStream.o .obj/EQStreamFactory.o ../common/logsys.o \
+../common/logsys_eqemu.o ../common/misc.o ../common/MiscFunctions.o \
+../common/Mutex.o ../common/opcodemgr.o ../common/packet_dump.o \
+../common/packet_functions.o ../common/rdtsc.o ../common/TCPConnection.o \
+../common/TCPServer.o ../common/timeoutmgr.o ../common/timer.o \
+../common/unix.o
+
+
+all: $(APP)
+
+
+$(APP): $(SF)
+	$(LINKER) $(LINKOUT)$@ $^ $(LINKOPTS)
+
+clean:
+	rm -f $(SF) $(APP)
+
+%.o: %.cpp
+	$(CC) $(NOLINK) $(COPTS) $< $(OUT)$@
+
+.obj/%.o: ../common/%.cpp ../common/%.h
+	mkdir -p .obj
+	$(CC) $(COPTS) $(NOLINK) $< $(OUT)$@
+
